--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "\"\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint ."
+    "start": "node app.js",
+    "lint": "npx eslint .",
+    "dev": "nodemon app.js"
   },
   "author": "Ilya Saenko",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.45.0"
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.1"
   }
 }
